[gd_scene load_steps=9 format=2]

[ext_resource path="res://DiceGoals.tscn" type="PackedScene" id=1]
[ext_resource path="res://Goal.gd" type="Script" id=2]
[ext_resource path="res://Audio/woo_hoo.mp3" type="AudioStream" id=3]
[ext_resource path="res://Audio/ta_daaaa.mp3" type="AudioStream" id=4]
[ext_resource path="res://Audio/wamp.mp3" type="AudioStream" id=5]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=8]
[ext_resource path="res://Theme/font_28.tres" type="DynamicFont" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 233.5, 265.25 )

[node name="Goal" type="Area2D" groups=["DiceDrop"]]
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 0.364706, 0.407843, 0.447059, 1 )
margin_right = 454.0
margin_bottom = 153.0
mouse_filter = 2
theme = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 449.0
margin_bottom = 148.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 424.0
margin_bottom = 123.0
mouse_filter = 2

[node name="Goal" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 404.0
margin_bottom = 35.0
theme = ExtResource( 8 )
custom_fonts/font = ExtResource( 9 )
text = "Tier 1 Goal"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 404.0
margin_bottom = 103.0
mouse_filter = 2

[node name="DiceGoals1" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 64.0
margin_bottom = 64.0
numNeeded = 0

[node name="DiceGoals2" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
diceNum = 2
numNeeded = 1

[node name="DiceGoals3" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
diceNum = 3
numNeeded = 0

[node name="DiceGoals4" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
diceNum = 4
numNeeded = 0

[node name="DiceGoals5" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
diceNum = 5
numNeeded = 1

[node name="DiceGoals6" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 340.0
margin_right = 404.0
margin_bottom = 64.0
diceNum = 6
numNeeded = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 227.5, 262.75 )
shape = SubResource( 1 )

[node name="OnDiceAdded" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="OnTeirUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Wamp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
pitch_scale = 1.1
